# thehell2-garbage

./: README.md
D1_TH2_DEV-copy/branches/th2/src/: Affixes.cpp  BaseMonster.cpp  BaseQuests.cpp  BitsBytes.h  CMakeLists.txt  CharSlots.cpp  CodeSave.cpp  Draw.cpp  Engine.cpp  Exception.cpp  GenerateMap.cpp  Hell.cpp  IniFile.cpp  InjectLib.h  Item.cpp  Lights.cpp  LineShader.h  LoadExe.h  LoadExeData.cpp  LoadingScreen.cpp  Main.cpp  MainMenu.cpp  Missile.cpp  Monster.cpp  Net.cpp  Object.cpp  PaletteShader.h  Panel.cpp  Perks.cpp  Player.cpp  PlayerTrade.cpp  PopupScreens.cpp  Quests.cpp  Room.cpp  SaveInfo.cpp  Saving.cpp  ScreenShotMaker.h  SomeSpell.cpp  SoundCache.cpp  Spells.cpp  (+40 more)
D1_TH2_DEV-copy/trunk/: CMakeLists.txt  InitProject.bat  th1-hd.sln  thehell2.res  thehell2.vNext.vcxproj  thehell2.vNext.vcxproj.filters
D1_TH2_DEV-copy/trunk/ExeResources/: ExeResources.vcxproj.filters
D1_TH2_DEV-copy/trunk/LoadDataDll/: LoadExeDataDll.vNext.vcxproj
D1_TH2_DEV-copy/trunk/MPQAccess/: CMakeLists.txt  MPQArchive.cpp  MPQArchive.h  MPQArchive_p.cpp  MPQArchive_p.h  MPQConsts.h  MPQFile.cpp  MPQFile.h  MPQFileWalker.cpp  stdafx_mpqaccess.h
D1_TH2_DEV-copy/trunk/MPQAccess/MPQAccessTest/: MPQAccessTest.vNext.vcxproj  MPQArchive_tests.cpp  MPQFile_p_tests.h  MPQFile_tests.cpp  listfile.cpp  main.cpp  moqs.h  mpqarchive_p_tests.cpp
D1_TH2_DEV-copy/trunk/MPQAccess/cmake/: FindStormLib.cmake  PrecompiledHeaders.cmake
D1_TH2_DEV-copy/trunk/Server/: Server.vNext.vcxproj
D1_TH2_DEV-copy/trunk/StashDll/: StashDll.vcxproj.filters
D1_TH2_DEV-copy/trunk/Tests/: CMakeLists.txt
D1_TH2_DEV-copy/trunk/Tests/lua/: test.cpp
D1_TH2_DEV-copy/trunk/ThDll/: Th1dll.vcxproj
D1_TH2_DEV-copy/trunk/cmake/: FindDirectDraw.cmake  FindHellfire.cmake  program.cmake  python.cmake  wrapper.py
D1_TH2_DEV-copy/trunk/lib/: SCommon.h  SFileExtractFile.cpp  SFileFindFile.cpp  SFileOpenFileEx.cpp  StormLib.h  TH-Debug.dif  TextArrays.xls  hell.lib  hell_loader.def  storm.def  storm_loader.def
D1_TH2_DEV-copy/trunk/lib/OldTH2dlls/: Strm2.idb
D1_TH2_DEV-copy/trunk/lib/bzip2/: blocksort.cpp  bzlib.cpp  bzlib.h  bzlib_private.h  compress.cpp  decompress.cpp  huffman.cpp  randtable.cpp
D1_TH2_DEV-copy/trunk/lib/misc/: md5.h
D1_TH2_DEV-copy/trunk/lib/oggvorbis/: libogg_static_debug.lib  libvorbis_static_debug.lib  libvorbisfile_static.lib  libvorbisfile_static_debug.lib
D1_TH2_DEV-copy/trunk/lib/pklib/: explode.cpp  implode.cpp
D1_TH2_DEV-copy/trunk/lib/wave/: wave.h
D1_TH2_DEV-copy/trunk/lib/zfs/: Readme.txt
D1_TH2_DEV-copy/trunk/lib/zfs/example/: zfs.cpp  zfs_example.sln  zlib.props  zlibstatic.props
D1_TH2_DEV-copy/trunk/lib/zfs/include/: zfsconfig.h  zfsystem.h  ziphdr.h  zstream.h
D1_TH2_DEV-copy/trunk/lib/zfs/lib/: zfs.lib  zfsstaticD.lib
D1_TH2_DEV-copy/trunk/lib/zlib/: adler32.cpp  inffast.cpp  inffast.h  inffixed.h  inflate.h  inftrees.cpp  trees.h  zconf.h  zlib_crc32.h  zutil.h
D1_TH2_DEV-copy/trunk/res/: credits.txt
D1_TH2_DEV-copy/trunk/src/: AffixEffects.cpp  AffixesRare.cpp  BaseItems.cpp  BaseObjectsOnMap.cpp  CastSprites.cpp  CharSlots.cpp  Config.cpp  Draw.cpp  Engine.cpp  Entry.cpp  Error.cpp  Exemap.cpp  File.cpp  GenerateQuestFloor.cpp  Halls.cpp  Hell.cpp  Help.cpp  IniFile.h  InjectLib.cpp  Item.cpp  LineShader.hlsl  LoadExeDataDll.cpp  Main.cpp  MenuEngine.cpp  Missile.cpp  Monster.cpp  MpqSave.cpp  Net.cpp  NetSync.cpp  Object.cpp  PaletteShader.hlsl  Panel.cpp  Path.cpp  Player.cpp  PlayersSync.cpp  Quests.cpp  SHA.cpp  SaveInfo.cpp  Saving.cpp  ScreenShotMaker.cpp  (+52 more)
D1_TH2_DEV-copy/trunk/tools/: asm_to_c.awk  config.ini  defguard.awk  defguard.bat  forheaders.bat  headerlist.bat  personal.props  regen_ver.bat
(+319 files in other folders)
